2009-04-19	Mike Massonnet
Add documentation

2009-04-18	Mike Massonnet
Add a simple signal for items being added in ClipmanHistory

	- panel-plugin/history.c, panel-plugin/history.h:
		Install a signal item-added in the class. Emit it when a new
		item is added into the history.
	- panel-plugin/main.c(plugin_register):
		Connect to the signal item-added after loading the data.
	- panel-plugin/main.c(cb_status_icon_quit),
	panel-plugin/main.c(cb_status_icon_popup_menu):
		New callback for the Quit item in the status icon popup menu.
		Hide the status icon before leaving the main loop as it can
		take a little moment sometimes.

2009-04-18	Mike Massonnet
Update credits for the translator and previous authors

2009-04-18	Mike Massonnet
Add about dialog

2009-04-16	Mike Massonnet
Init the locale one stage earlier

	- panel-plugin/main.c:
		Call xfce_textdomain() in the preinit callback otherwise the
		error message wouldn't be localisated.


2009-04-16	Mike Massonnet
Prepare for release

2009-04-15	Mike Massonnet
Use a WeakNotify callback... useless but well...

	- panel-plugin/main.c:
		Unref the status icon and move the plugin_save/free calls to a
		WeakNotify callback on the status icon.

2009-04-15	Mike Massonnet
Install autostart file automagically

	- panel-plugin/xfce4-clipman-plugin-autostart.desktop.in,
	panel-plugin/Makefile.am:
		Install a system wide autostart file with Hidden set to true
		by default.
	- panel-plugin/main.c:
		New function install_autostart_file() called after creating
		the status icon to install the autostart file to the user
		config directory (thus at the first run) with the key Hidden
		set automatically to either false or left to true.

2009-04-15	Mike Massonnet
Replace g_idle against g_timeout

	- panel-plugin/main.c(status_icon_register):
		Use g_timeout of 60 seconds instead of g_idle (asap as the main
		loop is idle) since I noticed that logging in with the plugin
		being autostarted and the panel was not yet all run up, the